--- a/postData.html
+++ b/postData.html
@@ -44,7 +44,6 @@
     <hr>
     <h2>Create a post</h2>
 
-
     <form method="post" id="postForm">
       <div class="form-group col-6">
         <label for="title">Title</label>
@@ -58,16 +57,18 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
-    <div class="alert alert-success" id="success-alert">
+    <div class="alert alert-success hidden" id="success-alert" style="display:none">
       <button type="button" class="close" data-dismiss="alert">x</button>
       <strong>Success! </strong>
-      Your post was submitted.
+      Your post has been submitted.
+    </div>
+    <div class="alert alert-danger" id="danger-alert" style="display:none">
+      <button type="button" class="close" data-dismiss="alert">x</button>
+      <strong>Error! </strong>
+      Your post submission failed.
     </div>
   </div>
 
-  <script>
-    $("#success-alert").hide();
-  </script>
   <script src="/assets/js/main.js"></script>
 </body>
 
