--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ml-auto">
-            <a class="active nav-item nav-link" href="https://gologic.ca/">Gologic</a>
+            <a class="active nav-item nav-link" href="https://github.com/bouhrassa">Github</a>
           </div>
         </div>
       </div>
